// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components: BoxDetails matches snapshot 1`] = `
<div
  className="makeStyles-root makeStyles-root"
>
  <div
    className="makeStyles-header makeStyles-item"
  >
    <h2
      className="MuiTypography-root MuiTypography-h2 css-dcgvbp-MuiTypography-root"
    >
      overview
    </h2>
  </div>
  <div
    className="makeStyles-item"
  >
    <p
      className="MuiTypography-root MuiTypography-body1 label css-pfovru-MuiTypography-root"
    >
      slot
    </p>
    <p
      className="MuiTypography-root MuiTypography-body1 detail css-pfovru-MuiTypography-root"
    >
      100,000,000
    </p>
  </div>
  <div
    className="makeStyles-item"
  >
    <p
      className="MuiTypography-root MuiTypography-body1 label css-pfovru-MuiTypography-root"
    >
      hash
    </p>
    <p
      className="MuiTypography-root MuiTypography-body1 detail css-pfovru-MuiTypography-root"
    >
      76nwV8zz8tLz97SBRXH6uwHvgHXtqJDLQfF66jZhQ857
    </p>
  </div>
</div>
`;

exports[`components: BoxDetails matches snapshot with title actions 1`] = `
<div
  className="makeStyles-root makeStyles-root"
>
  <div
    className="makeStyles-header makeStyles-item"
  >
    <h2
      className="MuiTypography-root MuiTypography-h2 css-dcgvbp-MuiTypography-root"
    >
      overview
    </h2>
    <button
      id="titleAction"
      onClick={[MockFunction]}
      type="button"
    >
      title action
    </button>
  </div>
  <div
    className="makeStyles-item"
  >
    <p
      className="MuiTypography-root MuiTypography-body1 label css-pfovru-MuiTypography-root"
    >
      slot
    </p>
    <p
      className="MuiTypography-root MuiTypography-body1 detail css-pfovru-MuiTypography-root"
    >
      100,000,000
    </p>
  </div>
  <div
    className="makeStyles-item"
  >
    <p
      className="MuiTypography-root MuiTypography-body1 label css-pfovru-MuiTypography-root"
    >
      hash
    </p>
    <p
      className="MuiTypography-root MuiTypography-body1 detail css-pfovru-MuiTypography-root"
    >
      76nwV8zz8tLz97SBRXH6uwHvgHXtqJDLQfF66jZhQ857
    </p>
  </div>
</div>
`;
